--- a/pages/faq.html
+++ b/pages/faq.html
@@ -87,7 +87,7 @@
     <section id="faq">
       <div
         id="faq"
-        class="mt-20 mx-auto faq-body gap-x-8 h-[auto] flex flex-col items-center justify-center px-4 md:px-0 md:gap-x-16 w-full md:max-w-[70em]"
+        class="mt-20 mx-auto faq-body gap-x-8 h-[auto] flex flex-col items-center justify-center px-4 md:px-0 md:gap-x-16 w-full pb-12"
       >
         <img
           src="../img/faq.jpg"
@@ -96,86 +96,91 @@
           alt=""
         />
 
-        <div class="faq-list">
-          <div class="md:w-auto w-full">
-            <details class="">
-              <summary>Is there a deadline to apply?</summary>
-              <p class="faq-content">
-                We do not have a specific deadline to apply, and we accept
-                applications throughout the year. This means that you can apply
-                at any time that is convenient for you.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary>What are the eligibility criteria for applying?</summary>
-              <p class="faq-content">
-                To apply, one must be a college student and have a startup idea.
-                This is the fundamental criterion by which we evaluate
-                applications. However, it's worth noting that the idea does not
-                need to be fully formed, it can be in the ideation stage as
-                well.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary>What's the selection ratio for the application?</summary>
-              <p class="faq-content">
-                Our selection ratio is quite high, meaning that if we see that
-                all the ideas have potential, we are ready to fund all of them.
-                We believe in the power of good ideas, and we want to support as
-                many of them as possible.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary>
-                I am in the ideation stage with no product. Can I still apply?
-              </summary>
-              <p class="faq-content">
-                Yes, you can still apply even if you are in the ideation stage
-                and don't have a product yet. We understand that not every idea
-                is fully formed at the time of application and that's okay. We
-                are here to support you and help you bring your idea to life.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary>
-                Will lack of business experience affect my application
-                shortlisting?
-              </summary>
-              <p class="faq-content">
-                No, having no background in running a business will not affect
-                your application for shortlisting. We believe that the passion
-                and drive to start a business are more important than any degree
-                or business background. Every application is treated equally,
-                and we take all factors into consideration when evaluating them.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary>
-                What is the cohort program run by Seedsnitch, and do you take
-                any cohort fees?
-              </summary>
-              <p class="faq-content">
-                The cohort program is offered 2-3 times per year and is
-                completely free to participants. All the selected applications
-                are part of the cohort. We believe that providing free resources
-                and support is the best way to help founders succeed.
-              </p>
-            </details>
-          </div>
+        <div class="container">
+          <details class="faq-card">
+            <summary>
+              Is there a deadline to apply?
+              <span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler">
+              We do not have a specific deadline to apply, and we accept
+              applications throughout the year. This means that you can apply at
+              any time that is convenient for you.</span
+            >
+          </details>
+          <details class="faq-card">
+            <summary>
+              What are the eligibility criteria for applying?
+              <span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler">
+              To apply, one must be a college student and have a startup idea.
+              This is the fundamental criterion by which we evaluate
+              applications. However, it's worth noting that the idea does not
+              need to be fully formed, it can be in the ideation stage as
+              well.</span
+            >
+          </details>
+          <details class="faq-card">
+            <summary>
+              What's the selection ratio for the application?
+              <span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler"
+              >Our selection ratio is quite high, meaning that if we see that
+              all the ideas have potential, we are ready to fund all of them. We
+              believe in the power of good ideas, and we want to support as many
+              of them as possible.</span
+            >
+          </details>
+          <details class="faq-card">
+            <summary>
+              I am in the ideation stage with no product. Can I still
+              apply?<span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler"
+              >Yes, you can still apply even if you are in the ideation stage
+              and don't have a product yet. We understand that not every idea is
+              fully formed at the time of application and that's okay. We are
+              here to support you and help you bring your idea to life.</span
+            >
+          </details>
+          <details class="faq-card">
+            <summary>
+              Will lack of business experience affect my application
+              shortlisting? <span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler"
+              >No, having no background in running a business will not affect
+              your application for shortlisting. We believe that the passion and
+              drive to start a business are more important than any degree or
+              business background. Every application is treated equally, and we
+              take all factors into consideration when evaluating them.</span
+            >
+          </details>
+          <details class="faq-card">
+            <summary>
+              What is the cohort program run by Seedsnitch, and do you take any
+              cohort fees?<span class="faq-open-icon">+</span>
+            </summary>
+            <span class="faq-card-spoiler"
+              >The cohort program is offered 2-3 times per year and is
+              completely free to participants. All the selected applications are
+              part of the cohort. We believe that providing free resources and
+              support is the best way to help founders succeed.</span
+            >
+          </details>
+
+          <h2 class="faq-heading">Still have questions?</h2>
+          <p class="faq-aftertext">
+            If you cannot find answer to your question in our FAQ, you can
+            always<br />
+            contact us. We will answer shortly!
+          </p>
         </div>
       </div>
     </section>
-    <!-- <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
+    <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
@@ -195,7 +200,7 @@
 
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
-    </footer> -->
+    </footer>
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
