--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <div class="text-medBlue font-bold text-center text-[20px]">
           <p>
-            We support college entrepreneurs through <br />
+            Supporting college entrepreneurs through <br />
             mentorship, a cohort program and <br />campus representation.
           </p>
         </div>
