--- a/pages/about.html
+++ b/pages/about.html
@@ -108,13 +108,13 @@
           <p
             class="text-[1em] md:text-[24px] font-[400] text-center md:pl-14 max-w-lg md:max-w-full leading-relaxed"
           >
-            Seedsnitch is a platform solely dedicated to assisting college
-            students in transforming their business ideas into profitable
-            enterprises. We are aware of the unique obstacles a student may face
-            when starting a business, and we are here to provide the guidance
-            and resources necessary to overcome them. We are a community with a
-            firm belief that when entrepreneurs come together to share their
-            experiences and offer one another support, great things can occur.
+            Seedsnitch is a platform dedicated to helping college students
+            transform their ideas into successful ventures. Being aware of the
+            unique challenges that a student might come across while starting
+            up, we are here to bridge the gap through guidance and resources
+            essential to overcome them. We are a community with a stern belief
+            that when entrepreneurs come together sharing their share of
+            experiences and support, great things happen.
           </p>
         </div>
       </div>
@@ -138,8 +138,8 @@
             class="hidden absolute -left-64 w-60 top-2 md:top-0 md:block"
           />
           <b> Seed funding and pre-seed funding opportunities:</b> We provide
-          the initial funding needed to get your business off the ground and
-          help you with your first steps of execution.
+          the initial funding required to get your business off the ground and
+          assist with the early phases of execution.
         </p>
         <p class="text-[16px]">
           <img
@@ -169,10 +169,10 @@
             alt=""
             class="hidden absolute -right-64 w-64 top-2 md:top-0 md:block"
           />
-          <b> Campus ambassador program:</b> A program open to all college
-          students, this program is a great way to gain valuable experience in
-          the startup world, network with like-minded individuals, and
-          earn extra money.
+          <b> Campus ambassador program:</b>The program, which is open to all
+          college students, is an excellent way to gain valuable experience in
+          the startup world, network with like-minded individuals, and earn
+          extra money.
         </p>
       </main>
     </section>
