--- a/pages/apply.html
+++ b/pages/apply.html
@@ -99,7 +99,7 @@
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             Join us in shaping the future of innovation by submitting your
             startup idea. Apply now and take the first step towards realizing
-            your entrepreneurial goals by writing us your application.
+            your entrepreneurial goals by submitting your application
           </h2>
         </div>
       </div>
@@ -254,7 +254,7 @@
                   <textarea
                     class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                     id="grid-diff"
-                    placeholder="What stands you apart?"
+                    placeholder="What makes you stand apart?"
                     rows="7"
                     required
                   ></textarea>
