--- a/pages/faq.html
+++ b/pages/faq.html
@@ -127,10 +127,10 @@
               <span class="faq-open-icon">+</span>
             </summary>
             <span class="faq-card-spoiler"
-              >Our selection ratio is quite high, meaning that if we see that
-              all the ideas have potential, we are ready to fund all of them. We
-              believe in the power of good ideas, and we want to support as many
-              of them as possible.</span
+              >Our selection ratio is quite high, implying that if there is
+              potential in all the ideas , we are ready to fund all of them. Our
+              belief in the power of good ideas is stern, and we want to support
+              as many of them as possible.</span
             >
           </details>
           <details class="faq-card">
@@ -165,9 +165,9 @@
             </summary>
             <span class="faq-card-spoiler"
               >The cohort program is offered 2-3 times per year and is
-              completely free to participants. All the selected applications are
-              part of the cohort. We believe that providing free resources and
-              support is the best way to help founders succeed.</span
+              completely free for participants. All the selected applications
+              are part of the cohort. We believe that providing free resources
+              and support is the best way to help founders succeed</span
             >
           </details>
 
