--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap"
@@ -29,7 +33,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>seedsnitch</title>
+    <title>Home | Seedsnitch</title>
   </head>
 
   <body class="bg-white">
@@ -41,7 +45,9 @@
     >
       <div class="max-w-1/3">
         <a href="#">
-          <img src="./img/logo-new.png" class="w-[250px]" alt="" />
+          <h1 class="font-title pl-8 text-4xl text-black font-normal">
+            SEEDSNITCH
+          </h1>
         </a>
       </div>
       <div
