--- a/pages/about.html
+++ b/pages/about.html
@@ -33,65 +33,105 @@
   </head>
 
   <body>
-    <nav
-      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
+    <!-- <nav
+      class="bg-transparent px-4 "
       id="navbar"
     >
-      <div class="max-w-1/3">
-        <a href="../index.html">
-          <img src="../img/logo-new.png" class="w-[250px]" alt="" />
-        </a>
-      </div>
+      <div class="max-w-1/2 md:max-w-1/3"></div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Resource</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
-      <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-<span class="hamburger-top"></span>
-<span class="hamburger-middle"></span>
-<span class="hamburger-bottom"></span>
-</button> -->
-      <!-- </div> -->
 
-      <!-- <div class="md:hidden">
-<div id="menu"
-  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-</div> -->
+     
 
-      <div
-        class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
+      <button
+        id="menu-btn"
+        class="block hamburger md:hidden focus:outline-none"
       >
-        <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
-        <a
-          href="./apply.html"
-          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+        <span class="hamburger-top"></span>
+        <span class="hamburger-middle"></span>
+        <span class="hamburger-bottom"></span>
+      </button>
+      <div class="md:hidden">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
         >
-          Apply
-        </a>
-        <a
-          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
-          href="./ambassador.html"
+          <a href="#">Pricing</a>
+          <a href="#">Product</a>
+          <a href="#">About Us</a>
+          <a href="#">Careers</a>
+          <a href="#">Community</a>
+        </div>
+      </div>
+    </nav> -->
+
+    <nav class="bg-white fixed top-0 left-0 right-0 mx-auto px-6 py-4">
+      <!-- Flex container -->
+      <div class="flex items-center justify-between">
+        <!-- Logo -->
+        <div class="pt-2 md:max-w-1/3">
+          <a href="../index.html">
+            <h1 class="font-title pl-8 text-4xl text-black font-normal">
+              SEEDSNITCH
+            </h1>
+          </a>
+        </div>
+        <!-- Menu Items -->
+        <div class="hidden space-x-14 md:pl-20 md:flex font-[600] md:max-w-1/3">
+          <a href="#" class="link">About</a>
+          <a href="#" class="link">Resource</a>
+          <a href="./contact.html" class="link">Contact Us</a>
+          <a href="./faq.html" class="link">FAQ</a>
+        </div>
+        <!-- Button -->
+        <div
+          class="md:max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
         >
-          Become an ambassador
-        </a>
+          <a
+            href="./apply.html"
+            class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+          >
+            Apply
+          </a>
+          <a
+            class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+            href="./ambassador.html"
+          >
+            Become an ambassador
+          </a>
+        </div>
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+
+      <div class="md:hidden">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
+        >
+          <a href="#">Pricing</a>
+          <a href="#">Product</a>
+          <a href="#">About Us</a>
+          <a href="#">Careers</a>
+          <a href="#">Community</a>
+        </div>
       </div>
     </nav>
-
     <section
       class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
     >
-      <!-- <img
-        src="../img/about.jpg"
-        class="hidden object-fill md:max-w-md md:block"
-        alt="we are seedsnitch"
-      /> -->
       <div
         class="flex flex-col items-center justify-between mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
       >
