--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,9 @@
     >
       <div class="max-w-1/3">
         <a href="../index.html">
-          <img src="../img/logo-new.png" class="w-[250px]" alt="" />
+          <h1 class="font-title pl-8 text-4xl text-black font-normal">
+            SEEDSNITCH
+          </h1>
         </a>
       </div>
       <div
