--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
   </head>
 
   <body class="bg-white">
-    <!--  -->
-    <!-- NavBar -->
     <nav
       class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
       id="navbar"
@@ -58,21 +56,6 @@
         <a href="./pages/contact.html" class="link">Contact</a>
         <a href="./pages/faq.html" class="link">FAQ</a>
       </div>
-      <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-<span class="hamburger-top"></span>
-<span class="hamburger-middle"></span>
-<span class="hamburger-bottom"></span>
-</button> -->
-      <!-- </div> -->
-
-      <!-- <div class="md:hidden">
-<div id="menu"
-  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-</div> -->
-
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
@@ -89,6 +72,37 @@
         >
           Become an ambassador
         </a>
+      </div>
+      <div class="md:hidden w-1/2 flex items-center justify-end">
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <div class="md:hidden" class="">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
+        >
+          <a href="./pages/about.html" class="font-normal px-3">About</a>
+          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="./pages/contact.html" class="font-normal px-3">Contact</a>
+          <a href="./pages/faq.html" class="font-normal px-3">FAQ</a>
+          <a href="./pages/apply.html" class="font-bold text-darkBlue px-3">
+            Apply
+          </a>
+          <a
+            href="./pages/ambassador.html"
+            class="font-bold text-darkBlue px-3"
+          >
+            Become an <br />
+            ambassador
+          </a>
+        </div>
       </div>
     </nav>
     <!-- Intro Section -->
@@ -182,21 +196,6 @@
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
     </footer>
-
-    <script>
-      var x = document.getElementById("navbar");
-      window.onscroll = function () {
-        if (
-          document.body.scrollTop >= x.clientHeight ||
-          document.documentElement.scrollTop >= x.clientHeight
-        ) {
-          x.classList.add("navbarColor");
-          // console.log("hello");
-          // x.remove("nav-transparent");
-        } else {
-          x.classList.remove("navbarColor");
-        }
-      };
-    </script>
   </body>
+  <script src="../js/scripts.js"></script>
 </html>
