--- a/pages/about.html
+++ b/pages/about.html
@@ -71,10 +71,8 @@
       </div>
     </nav> -->
 
-    <nav class="bg-white fixed top-0 left-0 right-0 mx-auto px-6 py-4">
-      <!-- Flex container -->
+    <!-- <nav class="bg-white fixed top-0 left-0 right-0 mx-auto px-6 py-4">
       <div class="flex items-center justify-between">
-        <!-- Logo -->
         <div class="pt-2 md:max-w-1/3">
           <a href="../index.html">
             <h1 class="font-title pl-8 text-4xl text-black font-normal">
@@ -82,14 +80,12 @@
             </h1>
           </a>
         </div>
-        <!-- Menu Items -->
         <div class="hidden space-x-14 md:pl-20 md:flex font-[600] md:max-w-1/3">
           <a href="#" class="link">About</a>
           <a href="#" class="link">Resource</a>
           <a href="./contact.html" class="link">Contact Us</a>
           <a href="./faq.html" class="link">FAQ</a>
         </div>
-        <!-- Button -->
         <div
           class="md:max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
         >
@@ -128,7 +124,74 @@
           <a href="#">Community</a>
         </div>
       </div>
+    </nav> -->
+    <nav
+      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue"
+      id="navbar"
+    >
+      <div class="max-w-1/2 md:max-w-1/3">
+        <a href="../index.html">
+          <h1 class="font-title pl-8 text-4xl text-black font-normal">
+            SEEDSNITCH
+          </h1>
+        </a>
+      </div>
+      <div
+        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
+      >
+        <a href="#" class="link">About</a>
+        <a href="#" class="link">Resource</a>
+        <a href="./contact.html" class="link">Contact</a>
+        <a href="./faq.html" class="link">FAQ</a>
+      </div>
+
+      <div
+        class="hidden md:max-w-1/3 items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
+      >
+        <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
+        <a
+          href="./apply.html"
+          class="cursor-pointer border-gray-200 border flex justify-center items-center font-medium rounded-md hover:bg-accent text-black text-xs shrink-0 py-2 px-2 md:py-2 md:px-4 md:text-sm"
+        >
+          Apply
+        </a>
+        <a
+          class="cursor-pointer flex justify-center items-center font-medium rounded-md border bg-[#0C6980] text-white hover:bg-[#084352] hover:text-white text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm"
+          href="./ambassador.html"
+        >
+          Become an ambassador
+        </a>
+      </div>
+      <div class="md:hidden w-1/2 flex items-center justify-end">
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <div class="md:hidden" class="">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
+        >
+          <a href="#" class="font-normal px-3">About</a>
+          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="./contact.html" class="font-normal px-3">Contact</a>
+          <a href="./faq.html" class="font-normal px-3">FAQ</a>
+          <a href="./apply.html" class="font-bold text-darkBlue px-3">
+            Apply
+          </a>
+          <a href="./ambassador.html" class="font-bold text-darkBlue px-3">
+            Become an <br />
+            ambassador
+          </a>
+        </div>
+      </div>
     </nav>
+
     <section
       class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
     >
@@ -237,20 +300,6 @@
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
     </footer>
-    <script>
-      var x = document.getElementById("navbar");
-      window.onscroll = function () {
-        if (
-          document.body.scrollTop >= x.clientHeight / 2 ||
-          document.documentElement.scrollTop >= x.clientHeight / 2
-        ) {
-          x.classList.add("navbarColor");
-          // console.log("hello");
-          // x.remove("nav-transparent");
-        } else {
-          x.classList.remove("navbarColor");
-        }
-      };
-    </script>
   </body>
+  <script src="../js/scripts.js"></script>
 </html>
