--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -52,21 +52,6 @@
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
-      <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
-<span class="hamburger-top"></span>
-<span class="hamburger-middle"></span>
-<span class="hamburger-bottom"></span>
-</button> -->
-      <!-- </div> -->
-
-      <!-- <div class="md:hidden">
-<div id="menu"
-  class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold  sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md bg-cardColor text-overlay">
-  <a href="#" id="projectLink" class="hover:text-darkGrayishBlue link">Projects</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">About</a>
-  <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
-</div> -->
-
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
       >
@@ -83,6 +68,34 @@
         >
           Become an ambassador
         </a>
+      </div>
+      <div class="md:hidden w-1/2 flex items-center justify-end">
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <div class="md:hidden" class="">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
+        >
+          <a href="./apply.html" class="font-normal px-3">About</a>
+          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="./contact.html" class="font-normal px-3">Contact</a>
+          <a href="./faq.html" class="font-normal px-3">FAQ</a>
+          <a href="./apply.html" class="font-bold text-darkBlue px-3">
+            Apply
+          </a>
+          <a href="#" class="font-bold text-darkBlue px-3">
+            Become an <br />
+            ambassador
+          </a>
+        </div>
       </div>
     </nav>
 
@@ -365,52 +378,6 @@
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
     </footer>
-    <script>
-      var x = document.getElementById("navbar");
-      window.onscroll = function () {
-        if (
-          document.body.scrollTop >= x.clientHeight / 2 ||
-          document.documentElement.scrollTop >= x.clientHeight / 2
-        ) {
-          x.classList.add("navbarColor");
-          // console.log("hello");
-          // x.remove("nav-transparent");
-        } else {
-          x.classList.remove("navbarColor");
-        }
-      };
-      var btnText2 = document.getElementById("myBtn2");
-
-      function myFunction() {
-        var dots = document.getElementById("dots");
-        var moreText = document.getElementById("more");
-        var btnText = document.getElementById("myBtn");
-
-        if (dots.style.display === "none") {
-          dots.style.display = "inline";
-          btnText.innerHTML = "Read more";
-          moreText.style.display = "none";
-        } else {
-          dots.style.display = "none";
-          btnText.innerHTML = "Read less";
-          moreText.style.display = "inline";
-        }
-      }
-      function myFunction2() {
-        var dots2 = document.getElementById("dots2");
-        var moreText2 = document.getElementById("more2");
-        var btnText2 = document.getElementById("myBtn2");
-
-        if (dots2.style.display === "none") {
-          dots2.style.display = "inline";
-          btnText2.innerHTML = "Read more";
-          moreText2.style.display = "none";
-        } else {
-          dots2.style.display = "none";
-          btnText2.innerHTML = "Read less";
-          moreText2.style.display = "inline";
-        }
-      }
-    </script>
   </body>
+  <script src="../js/scripts.js"></script>
 </html>
