--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -192,37 +192,6 @@
             </p>
           </div>
         </div>
-
-        <!-- <div
-          class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-8"
-        >
-          <div class="hidden md:flex flex-row justify-end w-1/2">
-            <img src="../img/img2.jpg" class="w-[600px] object-left" alt="" />
-          </div>
-          <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start md:pl-28 justify-center px-12 space-y-3"
-          >
-            <h1
-              class="md:font-extrabold font-semibold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
-            >
-              How does this work?
-            </h1>
-            <img
-              src="../img/img2.jpg"
-              class="block w-[200px] md:hidden"
-              alt=""
-            />
-            <p class="text-center text-[20px] font-normal w-full">
-              We will contact you if your application is accepted. Campus
-              ambassador tasks are simple: Make your friends aware of Seedsnitch
-              and identify students who want to start a business but need
-              assistance. We help. We support college students with ambition. We
-              are motivated by our passion, not by money. You will receive Rs.
-              5,000 if your recommended startup idea is funded. How can I
-              generate a good idea? Simply rely on instinct.
-            </p>
-          </div>
-        </div> -->
       </div>
     </section>
 
@@ -238,7 +207,7 @@
         <div
           class="w-full md:w-[600px] h-full rounded-md mx-auto form border-t border-t-gray-100 px-4"
         >
-          <form class="w-full h-full max-w-2xl px-4 py-6">
+          <form class="w-full h-full max-w-2xl px-4 py-6" name="ambassador">
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full px-3">
                 <label
@@ -248,6 +217,7 @@
                   Name
                 </label>
                 <input
+                  name="Name"
                   class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-name"
                   type="text"
@@ -267,6 +237,7 @@
                 <input
                   class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-email"
+                  name="Email"
                   type="email"
                   required
                   placeholder="Enter your email id"
@@ -284,6 +255,7 @@
                 <input
                   class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-name"
+                  name="Linkedin"
                   type="url"
                   placeholder="Your linkedin profile"
                 />
@@ -301,6 +273,7 @@
                 <textarea
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-plan"
+                  name="q1"
                   placeholder="Describe your approach here..."
                   rows="7"
                   required
@@ -318,6 +291,7 @@
                   Remember, you get rewarded if we help them scale.
                 </label>
                 <textarea
+                  name="q2"
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-prob"
                   placeholder="Drop their linkedin profiles here..."
@@ -335,6 +309,7 @@
                   Is there anything you want to tell us about yourself?
                 </label>
                 <textarea
+                  name="q3"
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-desc"
                   placeholder="Tell us about yourself..."
@@ -345,12 +320,11 @@
             </div>
             <div class="w-full">
               <div class="w-full flex flex-row items-center">
-                <button
+                <input
                   class="shadow color focus:shadow-outline focus:outline-none text-white font-semibold px-3 py-2 rounded w-full bg-accent hover:bg-[#37a697]"
-                  type="button"
-                >
-                  Send
-                </button>
+                  type="submit"
+                  id="ambass-submit"
+                />
               </div>
             </div>
           </form>
@@ -378,6 +352,19 @@
         <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
       </div>
     </footer>
+    <script>
+      const ambassURL =
+        "https://script.google.com/macros/s/AKfycbzr_Y08kcbAOgVgIbJSc28gtvaBm7ZvGOHselP4ZZg4KgcaAFM3iYhQ5--UQSWbZZ-2Qg/exec";
+      const ambassForm = document.forms["ambassador"];
+      ambassForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(ambassURL, { method: "POST", body: new FormData(ambassForm) })
+          .then((response) =>
+            alert("Thanks for applying us..! We Will Contact You Soon...")
+          )
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
   <script src="../js/scripts.js"></script>
 </html>
