--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -126,7 +126,7 @@
 
     <section>
       <div
-        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start container"
+        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start px-36"
       >
         <div
           class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-4"
@@ -164,7 +164,7 @@
           </div>
         </div>
 
-        <div class="w-full p-4 flex flex-row justify-evenly items-center my-4">
+        <div class="w-full p-4 flex flex-row justify-between items-center my-4">
           <div class="hidden md:flex flex-row justify-center w-1/2">
             <img src="../img/img2.jpg" class="w-[600px] object-right" alt="" />
           </div>
