--- a/pages/apply.html
+++ b/pages/apply.html
@@ -98,7 +98,7 @@
     </nav>
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full border border-b-slate-200"
     >
       <div
         class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
