--- a/index copy.html
+++ b/index copy.html
@@ -33,7 +33,7 @@
     </div>
     <div class="hidden container ml-36   flex-row items-center  justify-center space-x-8   md:flex max-w-1/3">
       <a href="./pages/about.html" class="link ">About</a>
-      <a href="#" class="link  ">Resource</a>
+      <a href="#" class="link  ">Community</a>
       <a href="./pages/contact.html" class="link  ">Contact</a>
       <a href="./pages/faq.html" class="link  ">FAQ</a>
     </div>
