--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./pages/about.html" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./pages/contact.html" class="link">Contact</a>
         <a href="./pages/faq.html" class="link">FAQ</a>
       </div>
@@ -89,7 +89,7 @@
           class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
         >
           <a href="./pages/about.html" class="font-normal px-3">About</a>
-          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="#" class="font-normal px-3">Community</a>
           <a href="./pages/contact.html" class="font-normal px-3">Contact</a>
           <a href="./pages/faq.html" class="font-normal px-3">FAQ</a>
           <a href="./pages/apply.html" class="font-bold text-darkBlue px-3">
