--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="hidden space-x-14 md:pl-20 md:flex font-[600] md:max-w-1/3">
           <a href="#" class="link">About</a>
-          <a href="#" class="link">Resource</a>
+          <a href="#" class="link">Community</a>
           <a href="./contact.html" class="link">Contact Us</a>
           <a href="./faq.html" class="link">FAQ</a>
         </div>
@@ -140,7 +140,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
       >
         <a href="#" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
@@ -178,7 +178,7 @@
           class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
         >
           <a href="#" class="font-normal px-3">About</a>
-          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="#" class="font-normal px-3">Community</a>
           <a href="./contact.html" class="font-normal px-3">Contact</a>
           <a href="./faq.html" class="font-normal px-3">FAQ</a>
           <a href="./apply.html" class="font-bold text-darkBlue px-3">
@@ -214,8 +214,8 @@
             Seedsnitch is a platform dedicated to helping college students
             transform their ideas into successful ventures. Being aware of the
             unique challenges that a student might come across while starting
-            up, we are here to bridge the gap through guidance and resources
-            essential to overcome them. We are a community with a stern belief
+            up, we are here to bridge the gap through guidance and Communitys
+            essential to overcome them. We are a Community with a stern belief
             that when entrepreneurs come together sharing their share of
             experiences and support, great things happen.
           </p>
@@ -226,9 +226,9 @@
       <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
     </div>
 
-    <section id="service" class="mb-12">
+    <section id="service" class="mb-12 mx-auto">
       <div
-        class="text-center text-4xl md:text-5xl font-bold text-[#242424] mb-8"
+        class="mx-auto text-center text-4xl md:text-5xl font-bold text-[#242424] mb-8"
       >
         <span class="text-accent"> Why</span> Choose Us?
       </div>
