--- a/pages/apply.html
+++ b/pages/apply.html
@@ -48,7 +48,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
@@ -85,7 +85,7 @@
           class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
         >
           <a href="./about.html" class="font-normal px-3">About</a>
-          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="#" class="font-normal px-3">Community</a>
           <a href="./contact.html" class="font-normal px-3">Contact</a>
           <a href="./faq.html" class="font-normal px-3">FAQ</a>
           <a href="#" class="font-bold text-darkBlue px-3"> Apply </a>
@@ -98,7 +98,7 @@
     </nav>
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#eeefef] w-full border border-b-slate-200"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
     >
       <div
         class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
