--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,7 +53,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
@@ -90,7 +90,7 @@
           class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
         >
           <a href="./about.html" class="font-normal px-3">About</a>
-          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="#" class="font-normal px-3">Community</a>
           <a href="#" class="font-normal px-3">Contact</a>
           <a href="./faq.html" class="font-normal px-3">FAQ</a>
           <a href="./apply.html" class="font-bold text-darkBlue px-3">
@@ -107,7 +107,7 @@
     <!-- Intro Section -->
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 w-full"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 w-full bg-[#f8f8f8]"
     >
       <!-- #ffdad1-->
 
