--- a/pages/faq.html
+++ b/pages/faq.html
@@ -48,7 +48,7 @@
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
-        <a href="#" class="link">Resource</a>
+        <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
       </div>
@@ -85,7 +85,7 @@
           class="absolute flex-col items-center hidden self-end py-4 mt-10 space-y-4 font-bold sm:w-min-3xl sm:self-center px-8 right-6 drop-shadow-md text-black bg-slate-50"
         >
           <a href="./about.html" class="font-normal px-3">About</a>
-          <a href="#" class="font-normal px-3">Resource</a>
+          <a href="#" class="font-normal px-3">Community</a>
           <a href="./contact.html" class="font-normal px-3">Contact</a>
           <a href="#" class="font-normal px-3">FAQ</a>
           <a href="./apply.html" class="font-bold text-darkBlue px-3">
@@ -181,7 +181,7 @@
             <span class="faq-card-spoiler"
               >The cohort program is offered 2-3 times per year and is
               completely free for participants. All the selected applications
-              are part of the cohort. We believe that providing free resources
+              are part of the cohort. We believe that providing free Communitys
               and support is the best way to help founders succeed</span
             >
           </details>
