--- a/index.html
+++ b/index.html
@@ -197,5 +197,5 @@
       </div>
     </footer>
   </body>
-  <script src="../js/scripts.js"></script>
+  <script src="./js/scripts.js"></script>
 </html>
