--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -126,7 +126,7 @@
 
     <section>
       <div
-        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start px-36"
+        class="py-4 text-center w-full h-full mx-auto flex flex-col items-center justify-start"
       >
         <div
           class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-4"
@@ -332,7 +332,7 @@
       </div>
     </section>
     <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
-      <div class="footer">
+      <div class="footer w-full">
         <div class="row">
           <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
@@ -340,7 +340,7 @@
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
         </div>
 
-        <div class="row">
+        <div class="row w-full">
           <ul>
             <li><a href="./about.html">About us</a></li>
             <li><a href="./contact.html">Contact us</a></li>
