--- a/index.html
+++ b/index.html
@@ -108,22 +108,25 @@
     <!-- Intro Section -->
     <section
       id="intro"
-      class="hidden h-[100vh] w-screen overflow-hidden md:flex justify-between flex-row"
+      class="hidden h-auto w-screen overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
     >
       <div
-        class="w-1/2 mt-14 space-y-8 flex flex-col justify-start"
+        class="w-1/2 space-y-8 flex flex-col justify-start items-center pt-36 text-center"
         id="intro-text"
       >
         <div
-          class="container text-3xl pt-5 md:max-w-3xl ml-16 text-accent md:text-6xl font-black mt-28 relative"
+          class="text-3xl pt-5 md:max-w-3xl text-accent md:text-6xl md:font-bold lg:font-black"
           id="intro-text"
         >
-          <span>
+          <span class="mt-64 relative">
             Fueling the college startup revolution
-            <img src="img/icon.png" class="w-[50px] absolute -right-12 -top-6"
-          /></span>
+            <img
+              src="img/icon.png"
+              class="w-[50px] absolute -right-14 -top-6"
+            />
+          </span>
         </div>
-        <div class="max-w-md text-medBlue font-semibold text-[20px] ml-16">
+        <div class="max-w-md text-medBlue font-semibold text-[20px]">
           <p>
             Supporting college entrepreneurs through <br />
             mentorship, a cohort program and <br />campus representation.
@@ -132,15 +135,15 @@
         <div>
           <a href="./pages/about.html">
             <button
-              class="text-white bg-[#0C6980] rounded-md py-3 px-9 mt-4 text-[16px] hover:bg-[#084352] ml-16"
+              class="text-white bg-[#0C6980] rounded-md py-3 px-7 text-[18px] hover:bg-[#084352]"
             >
               Learn More
             </button></a
           >
         </div>
       </div>
-      <div class="w-1/2 flex flex-row items-center justify-center">
-        <img src="img/2.jpg" class="object-contain" alt="" />
+      <div class="w-1/2 flex flex-row items-center justify-end p-8">
+        <img src="img/2.jpg" class="object-cover" alt="" />
       </div>
     </section>
     <section id="intro2" class="w-screen h-fit mb-4 block md:hidden">
