--- a/pages/apply.html
+++ b/pages/apply.html
@@ -118,12 +118,12 @@
       </div>
     </section>
 
-    <section id="about-container" class="mt-10 md:mt-0 mb-28 h-auto">
+    <section id="about-container" class="mt-10 md:mt-0 mb-20 h-auto">
       <div
         class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 md:pt-10"
       >
         <div
-          class="w-full md:w-[800px] h-auto rounded-md mx-auto form border-t border-t-gray-100 px-4 bg-white"
+          class="w-full md:w-[800px] h-auto rounded-md mx-auto md:form border-t border-t-gray-100 px-2 bg-white"
         >
           <form
             class="w-full h-full px-4 pt-6 pb-3 md:flex items-start justify-between bg-white"
@@ -232,21 +232,21 @@
                   />
                 </div>
               </div>
-              <div class="flex flex-wrap -mx-3 mb-6 p-2">
-                <div class="w-full md:px-3">
-                  <!--s  -->
+
+              <div class="flex flex-wrap -mx-3 mb-6 w-full">
+                <div class="w-full md:w-full px-3">
                   <label
-                    class="md:w-full block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-stage"
                   >
                     What is the current status of your startup (ideation,
                     early-stage)?
                   </label>
                   <input
-                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                     id="grid-stage"
-                    required
                     type="text"
+                    required
                     placeholder="Current status of startup"
                   />
                 </div>
@@ -254,10 +254,10 @@
             </div>
             <!-- <hr class="mb-6" /> -->
             <div
-              class="w-full md:w-1/2 flex flex-col items-center justify-start"
+              class="w-full md:w-1/2 flex flex-col items-start justify-start"
             >
               <div class="w-full flex flex-wrap -mx-3 mb-2">
-                <div class="w-full md:w-full mb-6 md:mb-0">
+                <div class="w-full md:w-full mb-6 md:mb-0 px-3">
                   <label
                     class="uppercase tracking-wide text-darkBlue text-xs font-bold mb-2 w-full"
                     for="grid-diff"
@@ -273,8 +273,8 @@
                   ></textarea>
                 </div>
               </div>
-              <div class="flex flex-wrap -mx-3 mb-2">
-                <div class="w-full md:w-full mb-6 md:mb-0 md:px-3">
+              <div class="w-full flex flex-wrap -mx-3 mb-2">
+                <div class="w-full mb-6 md:mb-0 px-3">
                   <label
                     class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-prob"
@@ -292,7 +292,7 @@
                 </div>
               </div>
 
-              <div class="flex flex-wrap -mx-3 mb-2">
+              <div class="w-full flex flex-wrap -mx-3">
                 <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                   <label
                     class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
@@ -311,8 +311,8 @@
                 </div>
               </div>
 
-              <div class="w-full px-4">
-                <div class="w-full flex flex-row items-center mt-8">
+              <div class="w-full flex flex-wrap -mx-3">
+                <div class="w-full md:w-full px-3 mb-6 md:mb-0 md:mt-8">
                   <button
                     class="shadow color focus:shadow-outline focus:outline-none text-white font-semibold px-3 py-2 rounded w-full bg-accent hover:bg-[#37a697]"
                     type="button"
