--- a/pages/contact.html
+++ b/pages/contact.html
@@ -107,10 +107,8 @@
     <!-- Intro Section -->
 
     <section
-      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 w-full bg-[#f8f8f8]"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
     >
-      <!-- #ffdad1-->
-
       <div
         class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
@@ -118,27 +116,26 @@
           <h2
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
-            <!-- text-[#f57456] -->
             Get in touch
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
-            <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
             creative dialogue with you.
           </h2>
         </div>
       </div>
     </section>
+
     <section
-      class="h-auto py-10 md:h-[590px] px-2 relative mb-20 md:mt-0 mt-12"
+      class="h-auto py-10 md:h-[590px] px-2 relative md:mb-16 md:mt-0 mt-10"
     >
       <div
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
       >
         <div
-          class="w-[400px] h-full rounded-md backdrop-blur-md mx-auto form border-t border-t-gray-200"
+          class="w-[400px] h-full rounded-md mx-auto border-t border-t-gray-200"
         >
-          <form class="w-full h-full max-w-lg px-4 py-6">
+          <form class="w-full h-full max-w-lg px-4 py-6" id="contact-form">
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label
@@ -236,7 +233,7 @@
           <div class="md:hidden flex flex-col items-center">
             <img
               src="../img/contact.png"
-              class="h-[400px] object-contain"
+              class="hidden h-[400px] object-contain"
               alt=""
             />
             <div
