--- a/pages/contact.html
+++ b/pages/contact.html
@@ -104,8 +104,6 @@
       </div>
     </nav>
 
-    <!-- Intro Section -->
-
     <section
       class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
     >
@@ -127,13 +125,13 @@
     </section>
 
     <section
-      class="h-auto py-10 md:h-[590px] px-2 relative md:mb-16 md:mt-0 mt-10"
+      class="h-auto py-10 md:h-[590px] px-2 relative md:mb-20 md:mt-0 mt-10"
     >
       <div
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
       >
         <div
-          class="w-[400px] h-full rounded-md mx-auto border-t border-t-gray-200"
+          class="w-full md:w-1/2 h-full rounded-md mx-auto border-t border-t-gray-200 flex flex-row justify-center"
         >
           <form class="w-full h-full max-w-lg px-4 py-6" id="contact-form">
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -230,30 +228,30 @@
               </div>
             </div>
           </form>
-          <div class="md:hidden flex flex-col items-center">
-            <img
-              src="../img/contact.png"
-              class="hidden h-[400px] object-contain"
-              alt=""
-            />
-            <div
-              class="bg-transparent p-2 flex flex-col justify-center items-start text-left"
-            >
+        </div>
+        <div class="md:hidden flex flex-col items-center">
+          <img
+            src="../img/contact.png"
+            class="hidden h-[400px] object-contain"
+            alt=""
+          />
+          <div
+            class="bg-transparent p-2 flex flex-col justify-center items-start text-left"
+          >
+            <div>
+              <p class="text-2xl font-semibold mb-4">
+                You can also reach out on
+              </p>
               <div>
-                <p class="text-2xl font-semibold mb-4">
-                  You can also reach out on
-                </p>
                 <div>
-                  <div>
-                    <p class="font-medium text-center">
-                      Phone:&nbsp;+91 8144200700&nbsp;
-                    </p>
-                    <p class="font-medium text-center">
-                      Email:&nbsp;seedsnitch@abc.com&nbsp;
-                    </p>
-                  </div>
-                  <p>&nbsp;</p>
+                  <p class="font-medium text-center">
+                    Phone:&nbsp;+91 8144200700&nbsp;
+                  </p>
+                  <p class="font-medium text-center">
+                    Email:&nbsp;seedsnitch@abc.com&nbsp;
+                  </p>
                 </div>
+                <p>&nbsp;</p>
               </div>
             </div>
           </div>
