--- a/pages/apply.html
+++ b/pages/apply.html
@@ -123,7 +123,7 @@
         class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 md:pt-10"
       >
         <div
-          class="w-full md:w-[800px] h-auto rounded-md mx-auto border-t border-t-gray-100 px-2 bg-white"
+          class="w-full md:w-[800px] h-auto rounded-md mx-auto border-t px-2 bg-white"
         >
           <form
             class="w-full h-full px-8 pt-6 pb-3 md:flex md:items-start md:justify-between bg-white justify-center"
