--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,7 +131,7 @@
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
       >
         <div
-          class="w-full md:w-1/2 h-full rounded-md mx-auto border-t border-t-gray-200 flex flex-row justify-center"
+          class="w-full md:w-1/2 h-full rounded-md mx-auto border-t flex flex-row justify-center"
         >
           <form class="w-full h-full max-w-lg px-4 py-6" id="contact-form">
             <div class="flex flex-wrap -mx-3 mb-6">
