--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       class="hidden h-auto w-screen overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
     >
       <div
-        class="w-1/2 space-y-8 flex flex-col justify-start items-center pt-36 text-center"
+        class="w-1/2 space-y-8 flex flex-col justify-center items-center pt-20 text-center"
         id="intro-text"
       >
         <div
@@ -146,12 +146,12 @@
         <img src="img/2.jpg" class="object-cover" alt="" />
       </div>
     </section>
-    <section id="intro2" class="w-screen h-fit mb-4 block md:hidden">
+    <section id="intro2" class="w-screen h-fit mb-6 block md:hidden">
       <div
         class="w-full h-fit space-y-12 py-12 flex flex-col items-center justify-center mt-28 rounded-xl z-10"
       >
         <div
-          class="container text-center text-accent text-5xl font-[800]"
+          class="container text-center text-accent text-5xl font-[800] flex flex-col justify-center"
           id="intro-text"
         >
           <span class=""> Fueling the college startup revolution</span>
@@ -177,7 +177,47 @@
       <img src="img/2.jpg" class="w-full h-auto" alt="">
     </div> -->
     </section>
-
+    <section>
+      <div
+        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-12 mb-6 mt-16"
+      >
+        <h2 class="font-bold text-center text-4xl md:text-5xl pb-2 text-accent">
+          A Guide <span class="text-[#242424]">for Participants</span>
+        </h2>
+        <h2
+          class="font-light text-2xl md:max-w-4xl text-center my-3 md:font-normal text-[#242424]"
+        >
+          A comprehensive overview of the benefits and opportunities available
+          to participants in our program
+        </h2>
+        <div class="index-row flex flex-col md:flex-row container">
+          <div class="course-col">
+            <h3>Incubators</h3>
+            <p>
+              We provide a large pool of innovative ideas to choose from,
+              increasing the chances of finding a suitable startup for funding
+              and support innovation.
+            </p>
+          </div>
+          <div class="course-col">
+            <h3>Student Founders</h3>
+            <p>
+              We connect founders with incubators. Applications that are not
+              selected are deeply examined to give founders validation of their
+              ideas
+            </p>
+          </div>
+          <div class="course-col">
+            <h3>College Students</h3>
+            <p>
+              Our Ambassador Program rewards college students for their
+              entrepreneurial spirit by offering them the chance to earn money
+              for referring startups.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
