--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,7 +54,11 @@
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
-        <a href="./contact.html" class="link">Contact</a>
+        <a
+          href="./contact.html"
+          class="font-bold border-b-[2px] border-[#01c0c4]"
+          >Contact</a
+        >
         <a href="./faq.html" class="link">FAQ</a>
       </div>
       <div
@@ -131,7 +135,7 @@
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
       >
         <div
-          class="w-full md:w-1/2 h-full rounded-md mx-auto border-t flex flex-row justify-center"
+          class="w-full md:w-1/2 h-full rounded-md mx-auto flex flex-row justify-center"
         >
           <form class="w-full h-full max-w-lg px-4 py-6" id="contact-form">
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -209,7 +213,7 @@
                   Message
                 </label>
                 <textarea
-                  class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                  class="resize-none w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-message"
                   placeholder="Enter your message.."
                   rows="7"
