--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
       <div
         class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
       >
-        <a href="#" class="link">About</a>
+        <a href="#" class="font-bold border-b-[2px] border-[#01c0c4]">About</a>
         <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
         <a href="./faq.html" class="link">FAQ</a>
@@ -164,7 +164,7 @@
             class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
           >
             <h1
-              class="md:font-black font-bold text-[40px] md:text-5xl pb-2 text-accent text-center w-full"
+              class="font-bold text-[40px] md:text-5xl pb-2 text-accent text-center w-full"
             >
               What is seedsnitch?
             </h1>
@@ -186,7 +186,7 @@
         </div>
       </div>
     </section>
-    <section id="service" class="mb-12 mx-auto">
+    <section id="service" class="mb-12 mx-auto ml-10">
       <div
         class="mx-auto text-center text-[40px] md:text-5xl font-bold text-[#242424] mb-8"
       >
