--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -124,7 +124,7 @@
         class="py-4 text-center mx-auto flex flex-col items-center justify-start"
       >
         <div
-          class="w-full p-4 flex flex-row-reverse justify-evenly items-center my-4"
+          class="w-full p-4 md:py-4 md:px-8 flex flex-row-reverse justify-evenly items-center my-4"
         >
           <div class="hidden md:flex flex-row justify-center w-1/2">
             <img
@@ -137,7 +137,7 @@
             class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
           >
             <h1
-              class="md:font-black font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
+              class="font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
             >
               What is it about?
             </h1>
@@ -159,7 +159,9 @@
           </div>
         </div>
 
-        <div class="w-full p-4 flex flex-row justify-between items-center my-4">
+        <div
+          class="w-full py-4 px-4 flex flex-row justify-between items-center my-4 md:px-8"
+        >
           <div class="hidden md:flex flex-row justify-center w-1/2">
             <img src="../img/img2.jpg" class="w-[600px] object-right" alt="" />
           </div>
@@ -167,7 +169,7 @@
             class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
           >
             <h1
-              class="md:font-black font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
+              class="font-bold text-4xl md:text-5xl pb-2 text-accent text-center w-full"
             >
               How does this work?
             </h1>
@@ -194,9 +196,7 @@
       <div
         class="h-full w-full flex flex-col gap-4 justify-between items-center space-y-8 p-4 mb-8"
       >
-        <h2
-          class="md:font-extrabold font-bold text-4xl md:text-5xl text-accent"
-        >
+        <h2 class="md:font-bold font-bold text-4xl md:text-5xl text-accent">
           <span class="text-[#242424]"> Join our&nbsp;</span>Mission
         </h2>
         <div
