--- a/pages/faq.html
+++ b/pages/faq.html
@@ -50,7 +50,9 @@
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
         <a href="./contact.html" class="link">Contact</a>
-        <a href="./faq.html" class="link">FAQ</a>
+        <a href="./faq.html" class="font-bold border-b-[2px] border-[#01c0c4]"
+          >FAQ</a
+        >
       </div>
       <div
         class="max-w-1/3 hidden items-center justify-end pr-4 font-semibold button-effect space-x-4 md:flex"
