--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
       class="hidden h-auto w-screen overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
     >
       <div
-        class="w-1/2 space-y-8 flex flex-col justify-center items-center pt-20 text-center"
+        class="w-1/2 space-y-8 flex flex-col justify-center items-start pt-20 text-center pl-24"
         id="intro-text"
       >
         <div
-          class="text-3xl pt-5 md:max-w-3xl text-accent md:text-6xl md:font-bold lg:font-black"
+          class="text-3xl pt-5 md:max-w-3xl text-accent md:text-6xl md:font-bold lg:font-black text-left"
           id="intro-text"
         >
-          <span class="mt-64 relative">
+          <span class="mt-64 relative text-center">
             Fueling the college startup revolution
             <img
               src="img/icon.png"
@@ -126,10 +126,10 @@
             />
           </span>
         </div>
-        <div class="max-w-md text-medBlue font-semibold text-[20px]">
+        <div class="max-w-lg text-medBlue font-semibold text-[20px] text-left">
           <p>
-            Supporting college entrepreneurs through <br />
-            mentorship, a cohort program and <br />campus representation.
+            Supporting college entrepreneurs through mentorship, a cohort
+            program and campus representation.
           </p>
         </div>
         <div>
