--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       class="hidden h-auto w-screen overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
     >
       <div
-        class="w-1/2 space-y-8 flex flex-col justify-center items-start pt-20 text-center pl-24"
+        class="w-1/2 space-y-8 flex flex-col justify-center items-start pt-20 text-center pl-32"
         id="intro-text"
       >
         <div
@@ -178,9 +178,10 @@
       <img src="img/2.jpg" class="w-full h-auto" alt="">
     </div> -->
     </section>
+
     <section>
       <div
-        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-12 mb-6 mt-16"
+        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-16 bg-[#f8f8f8] pt-4"
       >
         <h2 class="font-bold text-center text-4xl md:text-5xl pb-2 text-accent">
           A Guide <span class="text-[#242424]">for Participants</span>
