--- a/pages/apply.html
+++ b/pages/apply.html
@@ -112,7 +112,7 @@
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             Join us in shaping the future of innovation by submitting your
             startup idea. Apply now and take the first step towards realizing
-            your entrepreneurial goals by submitting your application
+            your entrepreneurial goals by submitting your application.
           </h2>
         </div>
       </div>
@@ -126,7 +126,7 @@
           class="w-full md:w-[800px] h-auto rounded-md mx-auto border-t px-2 bg-white"
         >
           <form
-            class="w-full h-full px-8 pt-6 pb-3 md:flex md:items-start md:justify-between bg-white justify-center"
+            class="w-full h-full px-4 md:px-8 pt-6 pb-3 md:flex md:items-start md:justify-between bg-white justify-center"
           >
             <div
               class="w-full md:w-1/2 flex flex-col md:items-start md:justify-start items-center"
