--- a/pages/faq.html
+++ b/pages/faq.html
@@ -117,7 +117,7 @@
           <details class="faq-card">
             <summary>
               Is there a deadline to apply?
-              <span class="faq-open-icon">+</span>
+              <span class="faq-open-icon ml-2">+</span>
             </summary>
             <span class="faq-card-spoiler">
               We do not have a specific deadline to apply, and we accept
