--- a/pages/about.html
+++ b/pages/about.html
@@ -113,7 +113,7 @@
             Get to know <span class="text-accent"> about us</span>
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
-            Discover the passion and purpose behind our mission
+            Discover the passion and purpose behind our mission.
           </h2>
         </div>
       </div>
@@ -161,7 +161,7 @@
             <img src="../img/about.jpg" class="w-[600px] object-right" alt="" />
           </div>
           <div
-            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3"
+            class="container md:w-1/2 w-full flex flex-col items-center md:items-start justify-center px-6 md:px-12 space-y-3 pb-12"
           >
             <h1
               class="font-bold text-[40px] md:text-5xl pb-2 text-accent text-center w-full"
@@ -186,7 +186,7 @@
         </div>
       </div>
     </section>
-    <section id="service" class="mb-12 mx-auto ml-10">
+    <section id="service" class="mb-12 md:pl-10">
       <div
         class="mx-auto text-center text-[40px] md:text-5xl font-bold text-[#242424] mb-8"
       >
