--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
+        class="hidden container  pl-28 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
@@ -118,7 +118,7 @@
           <h2
             class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
           >
-            Get in touch
+            Get in touch <span class="text-[#242424]"> with us </spanc>
           </h2>
           <h2 class="font-light text-2xl md:font-normal text-[#242424]">
             Our team is always ready to lend a helping hand and engage in a
@@ -129,13 +129,13 @@
     </section>
 
     <section
-      class="h-auto py-10 md:h-[590px] px-2 relative md:mb-20 md:mt-0 mt-10"
+      class="h-auto py-10  px-2 relative md:mb-20 md:mt-0 mt-10"
     >
       <div
-        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row md:absolute right-4"
+        class="h-full w-full flex flex-col gap-4 justify-between md:flex-row  right-4"
       >
         <div
-          class="w-full md:w-1/2 h-full rounded-md mx-auto flex flex-row justify-center"
+          class="w-full md:w-1/2 h-full rounded-md mx-auto flex flex-row justify-center mr-3"
         >
           <form class="w-full h-full max-w-lg px-4 py-6" id="contact-form">
             <div class="flex flex-wrap -mx-3 mb-6">
@@ -236,7 +236,7 @@
         <div class="md:hidden flex flex-col items-center">
           <img
             src="../img/contact.png"
-            class="hidden h-[400px] object-contain"
+            class="hidden h-[450px] object-contain"
             alt=""
           />
           <div
