--- a/index.html
+++ b/index.html
@@ -179,19 +179,29 @@
     </div> -->
     </section>
 
+    <section
+      class="mt-20 gap-x-8 h-auto md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
+    >
+      <div
+        class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
+      >
+        <div class="w-full md:w-[800px] text-center p-4 md:p-2">
+          <h2
+            class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
+          >
+            A Guide <span class="text-[#242424]">for Participants</span>
+          </h2>
+          <h2 class="font-light text-2xl md:font-normal text-[#242424]">
+            A comprehensive overview of the benefits and opportunities available
+            to participants in our program.
+          </h2>
+        </div>
+      </div>
+    </section>
     <section>
       <div
         class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-16 bg-[#f8f8f8] pt-4"
       >
-        <h2 class="font-bold text-center text-4xl md:text-5xl pb-2 text-accent">
-          A Guide <span class="text-[#242424]">for Participants</span>
-        </h2>
-        <h2
-          class="font-light text-2xl md:max-w-4xl text-center my-3 md:font-normal text-[#242424]"
-        >
-          A comprehensive overview of the benefits and opportunities available
-          to participants in our program
-        </h2>
         <div class="index-row flex flex-col md:flex-row container">
           <div class="course-col">
             <h3>Incubators</h3>
