--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -100,21 +100,21 @@
     </nav>
 
     <section
-      class="mt-20 gap-x-8 h-auto md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
+      class="mt-20 gap-x-8 h-[auto] md:flex-row px-4 md:px-0 md:gap-x-16 bg-[#f8f8f8] w-full border border-b-slate-200"
     >
       <div
-        class="text-center w-full h-full mx-auto flex flex-col items-center justify-start md:w-1/2 md:py-12"
+        class="text-center md:w-1/2 w-full h-full mx-auto flex flex-col items-center justify-start md:py-12"
       >
         <div class="w-full md:w-[800px] text-center p-4 md:p-2">
           <h2
-            class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-accent"
+            class="md:font-extrabold font-bold text-4xl md:text-5xl pb-2 text-[#242424]"
           >
-            <span class="text-[#242424]"> Become an </span>ambassador
+            Become an <span class="text-accent">ambassador</span>
           </h2>
-          <h2 class="font-light text-2xl md:font-normal text-[#242424] w-full">
-            Join the Seedsnitch Ambassador Program and assist your
-            peers in transforming ideas into startups
-            while also earning incentives for each referral.
+          <h2 class="font-light text-2xl md:font-normal text-[#242424]">
+            Join the Seedsnitch Ambassador Program and assist your peers in
+            transforming ideas into startups while also earning incentives for
+            each referral.
           </h2>
         </div>
       </div>
